# Snapify

./: README.md  docker-compose.yml  package-lock.json  package.json  test.py
client/: .gitignore  Dockerfile  package-lock.json  package.json
client/src/: App.tsx  index.tsx  store.ts  types.ts
client/src/API Modules/: checkAuth.ts  checkFollowers.ts  followUser.ts  getPublicUserProfile.ts  getPublicUserProfileMatches.ts  getUserProfile.ts  saveProfile.ts  searchSong.ts  searchSpotifyArtist.ts  searchUserPlaylist.ts
client/src/Components/: EditArtists.tsx  EditItems.css  EditPlaylists.tsx  EditProfile.css  EditProfile.tsx  EditSong.tsx  SpotifyButton.css  SpotifyButton.tsx  UserHeader.tsx  ViewProfile.css  ViewProfile.tsx
client/src/Hooks/: http-hook.js
client/src/Pages/: LandingPage.css  LandingPage.tsx  UserProfilePage.css  UserProfilePage.tsx  UserProfilePublicPage.tsx
server/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
server/api/: app.py  consumer.py  producer.py  utils.py  wrapper_utils.py
server/api/blueprints/: auth.py  auth_ref.py  user.py
server/api/models/: artists.py  followers.py  lyrics.py  playlists.py  songs.py  users.py
server/api/services/: user_service.py
server/migrations/versions/: ac80dd492c40_2024_04_25_remove_dynamic_user_data_.py  ba6b397ec577_2024_03_17_add_user_last_login_column_.py
server/scripts/: create_table.py
